[package]
name = "c-lightning-http-plugin"
version = "0.1.0"
authors = ["Keagan McClelland <keagan@helix.local>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.11.0"
crossbeam-channel = "0.4.2"
failure = "0.1.7"
futures = { version = "0.3.4", features = ["async-await"] }
hyper = { version = "0.13.3", features = ["stream"] }
lazy_async_pool = "0.3.0"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2.13", features = ["full"] }