[package]
name = "c-lightning-http-plugin"
version = "0.2.0"
authors = ["Keagan McClelland <keagan@start9labs.com>", "Aiden McClelland <me@drbonez.dev>"]
edition = "2018"
description = "A plugin for c-lightning that proxies http rpc traffic to the unix domain socket."
license = "MIT"
repository = "https://github.com/Start9Labs/c-lightning-http-plugin"
documentation = "https://docs.rs/c-lightning-http-plugin"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12.3"
crossbeam-channel = "0.4.4"
failure = "0.1.8"
futures = { version = "0.3.5", features = ["async-await"] }
hyper = { version = "0.13.8", features = ["stream"] }
lazy_async_pool = "0.3.3"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2.22", features = ["full"] }